Fix lists centering on mobile
fix #61

--- a/src/components/ListRow/ListRow.scss
+++ b/src/components/ListRow/ListRow.scss
@@ -3,6 +3,10 @@
   margin: 2em;
 }
 
+.boughtPresent {
+  font-size: 1.35em;
+}
+
 .avatarImage {
   $size: 64px;
   display: inline-block;
